samples/_failures_safe/1761393409_0b4dd9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5859636.c: In function ‘bfs_traversal’:
./samples/SAFE/__tmp_a5859636.c:142:31: error: expected ‘]’ at end of input
  142 |                     queue[rear
      |                               ^
      |                               ]
./samples/SAFE/__tmp_a5859636.c:142:21: error: expected declaration or statement at end of input
  142 |                     queue[rear
      |                     ^~~~~
./samples/SAFE/__tmp_a5859636.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5859636.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5859636.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5859636.c:142:21: error: expected declaration or statement at end of input
